step list alignment fix

--- a/src/app/shared/forms/planet-step-list.scss
+++ b/src/app/shared/forms/planet-step-list.scss
@@ -6,6 +6,10 @@
   cursor: auto;
 }
 
+.mat-mdc-list-item span, button {
+  vertical-align: middle;
+}
+
 .planet-step-list-form-container {
   display: grid;
   grid-template-rows: min-content auto min-content;
