--- a/src/app/users/users-achievements/users-achievements.scss
+++ b/src/app/users/users-achievements/users-achievements.scss
@@ -59,7 +59,7 @@
       margin: 0.75rem 0;
     }
 
-    .mat-mdc-list-line {
+    .mat-mdc-list-item-line {
       word-wrap: break-word;
       white-space: pre-wrap;
     }
